--- a/blog-detail.html
+++ b/blog-detail.html
@@ -4,95 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Technology Article</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
-            color: #333;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
-        .container {
-            max-width: 800px;
-            background-color: #fff;
-            padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            margin: 20px;
-            border-radius: 8px;
-        }
-        .article-title {
-            font-size: 24px;
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
-        .article-date {
-            font-size: 14px;
-            color: #999;
-            margin-bottom: 20px;
-        }
-        .article-content {
-            line-height: 1.6;
-            margin-bottom: 20px;
-        }
-        .comment-section {
-            display: flex;
-            align-items: center;
-            border-top: 1px solid #eee;
-            padding-top: 20px;
-            margin-top: 20px;
-        }
-        .comment-input {
-            border: 1px solid #ddd;
-            padding: 10px;
-            border-radius: 4px;
-            width: 100%;
-            margin-right: 10px;
-        }
-        .popular-posts {
-            margin-top: 40px;
-        }
-        .popular-title {
-            font-size: 20px;
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
-        .post-preview {
-            display: flex;
-            flex-direction: column;
-            background-color: #f8f8f8;
-            padding: 10px;
-            border-radius: 4px;
-            margin-bottom: 10px;
-        }
-        .post-preview-title {
-            font-size: 18px;
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
-        .post-date {
-            font-size: 12px;
-            color: #777;
-            margin-bottom: 10px;
-        }
-        .post-content {
-            font-size: 14px;
-            color: #555;
-            margin-bottom: 10px;
-        }
-        .read-more {
-            font-size: 14px;
-            color: #007bff;
-            text-decoration: none;
-        }
-    </style>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
-<div class="container">
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <a href="index.html">
+                    <img src="./img/IMAGES/Logo.png" alt="">
+                </a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+            </ul>
+            <div class="cta">
+                <a href="#">Sign Up</a>
+            </div>
+        </nav>
+    </header>
+<div class="blog-detail-container">
     <div class="article-title">Teknologi</div>
     <div class="article-date">- Januari 02, 2024</div>
     <div class="article-content">
@@ -121,6 +53,23 @@
         </div>
     </div>
 </div>
-
+<div class="page-wrapper">
+    <footer class="footer">
+        <div class="footer-content">
+            <p>&copy; 2024 WebtechID. All rights reserved.</p>
+            <div class="social-icons">
+                <a href="https://www.facebook.com" target="_blank">
+                    <img src="img/Colorful/fb.png" alt="Facebook">
+                </a>
+                <a href="https://www.twitter.com" target="_blank">
+                    <img src="img/Colorful/twitter.png" alt="Twitter">
+                </a>
+                <a href="https://www.linkedin.com" target="_blank">
+                    <img src="img/Colorful/linkedin.png" alt="LinkedIn">
+                </a>
+            </div>
+        </div>
+    </footer>
+</div>
 </body>
 </html>
